# unn_slot_catcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dotenv_example.txt  main.py  pyproject.toml  req.txt  requirements.txt  ruff.toml
src/: app.py  main.py
src/catcher/: __init__.py  browser.py  catcher.py  catcher_report.py  config.py  constants.py  logging_config.py  notifier.py
tests/: test_catcher.py
