[project]
name = "unn-slot-catcher"
version = "0.1.0"
description = "A simple bot that helps to get a slot with a psychologist at Lobachevsky University"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Savely Antonov", email = "savelytest@yandex.ru" }]
license = { file = "LICENSE" }
dependencies = [
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "selenium>=4.44.0",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_untyped_decorators = false
warn_unused_ignores = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
    "types-requests>=2.33.0.20260518",
]
